<resources>
    <string name="app_title">Everplace</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove_line">Remove directions</string>
    <string name="action_download_more">More results</string>
    <string name="action_share">Share</string>
    <string name="action_clear_all">Clear all</string>
    <string name="action_check_setting">Check setting</string>
    <string name="action_filter">Filter search</string>
    <string name="action_fast_search">Fast search</string>
    <string name="action_show_list">Show list</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_driving_mode">Driving mode</string>
    <string name="action_walking_mode">Walking mode</string>
    <string name="about_email">Email: contact@zulu-solutions.com</string>
    <string name="about_website">Website: http://zulu-solutions.com/</string>
    <string name="about_phone">Phone: (+84) 984 367 830</string>
    <string name="about_address">Address: Blue Sky Tower, 01 Bach Dang Street, Ward 2, Tan Binh Dist., Ho Chi Minh City, Vietnam</string>
    <string name="text_place_sharing">This is a good place:</string>
    <string name="text_subject_sharing">Place sharing by Everplace</string>
    <string name="text_search_distance">Search nearby quickly</string>
    <string name="text_search_radius">Search by radius</string>
    <string name="text_main_search_nearby">Nearby places</string>
    <string name="text_main_search_radius">Radius: {0} km</string>
    <string name="text_main_search_keyword">Keyword: {0}</string>
    <string name="text_hint_radius">Enter radius value (&lt;50km)</string>
    <string name="text_with_keyword">With key word</string>
    <string name="text_hint_keyword">Enter key word</string>
    <string name="text_zoom">Zoom:</string>
    <string name="text_start_navigate">Navigate</string>
    <string name="text_loading">Loading…</string>
    <string name="text_searching">Searching…</string>
    <string name="text_distance">Distance about</string>
    <string name="text_current_location">Your location</string>
    <string name="text_in_favourite">Saved favourite</string>
    <string name="text_not_favourite">Not favourite</string>
    <string name="text_wrap_position">Wrap</string>
    <string name="text_from">From:</string>
    <string name="text_to">To:</string>
    <string name="text_mode_driving">Driving mode</string>
    <string name="text_mode_walking">Walking mode</string>
    <string name="text_get_direction">Get direction</string>
    <string name="text_expand_map">Expand map</string>
    <string name="text_collapse_map">Collapse map</string>
    <string name="text_no_phone">No phone</string>
    <string name="text_no_favorite">No items</string>
    <string name="text_saved_favorite">Saved place to favorite</string>
    <string name="text_removed_favorite">Removed place from favorite</string>
    <string name="text_favorite_db_fail">Fail to access favorite database</string>
    <string name="text_no_of_reviews">&lt;u>{0} review(s)&lt;/u></string>
    <string name="text_app_version">Version {0}</string>
    <string name="text_copyright">ZuluSolutions © 2014</string>
    <string name="title_search_filter">Search Filter</string>
    <string name="title_reviews_list">Reviews List</string>
    <string name="title_direction_option">Direction Options</string>
    <string name="title_direction_details">Direction</string>
    <string name="title_category">Category</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_about_us">About us</string>
    <string name="title_history">History</string>
    <string name="title_main">Main Screen</string>
    <string name="title_choose_email">Send Email</string>
    <string name="btn_search">Search</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="text_setting">Settings</string>
    <string name="text_list_places">Places List: {0} result(s)</string>
    <string name="text_place_details">Places Details</string>
    <string name="pref_general">Help &amp; About</string>
    <string name="pref_language">Language</string>
    <string name="pref_interface">Interface</string>
    <string name="pref_select_cate_title">Place type display</string>
    <string name="pref_select_cate_summary">Choose place types to display on main screen</string>
    <string name="pref_language_summary">Application language</string>
    <string name="pref_language_title">Select application language</string>
    <string name="pref_cate_type_summary">Home display type</string>
    <string name="pref_cate_type_title">Select type to display home menu</string>
    <string name="pref_help">Help</string>
    <string name="pref_help_summary">Click for help</string>
    <string name="pref_about">About us</string>
    <string name="pref_about_summary">Click for about us</string>
    <string name="home_restaurant">Restaurant</string>
    <string name="home_park">Park</string>
    <string name="home_cafe">Cafe</string>
    <string name="home_zoo">Zoo</string>
    <string name="home_food">Food</string>
    <string name="home_bar">Bar</string>
    <string name="home_shopping">Shop, store</string>
    <string name="home_post_office">Post office</string>
    <string name="home_bank">ATM, bank</string>
    <string name="home_hospital">Hospital</string>
    <string name="home_pharmacy">Pharmacy</string>
    <string name="home_bus_station">Bus station</string>
    <string name="home_gas_station">Gas station</string>
    <string name="home_super_market">Market</string>
    <string name="home_museum">Museum</string>
    <string name="home_school">School</string>
    <string name="home_university">University</string>
    <string name="home_beauty_salon">Beauty &amp; Spa</string>
    <string name="home_stadium">Stadium</string>
    <string name="home_gym">Gym</string>
    <string name="home_movie_theater">Cinema</string>
    <string name="home_night_club">Night club</string>
    <string name="msg_about">Zulu Everplace application helps you search and explore every nearby places that match your target, a very small and convenience application.</string>
    <string name="msg_develop_by">Develop by ZuluSolutions.</string>
    <string name="msg_contact">Please contact us at:</string>
    <string name="msg_contact_at_email">1. zulusolutions@gmail.com</string>
    <string name="msg_contact_at_page">2. https://www.facebook.com/ZuluSolutions</string>
    <string name="msg_no_data_from_google">Opps, can not access google service at the moment, try again later.</string>
    <string name="msg_restart_app">Can not connect to your location, please get back and try again.</string>
    <string name="msg_no_email_app">Can not find any email application in your phone.</string>
    <string name="msg_url_fail">Can not find your url.</string>
    <string name="msg_map_not_found">Can not find any maps app on your device.</string>
    <string name="msg_no_internet_access">Can not access the internet, please enable your wifi or 3G service.</string>
    <string name="msg_change_language_successfully">Change language successfully.</string>
    <string name="msg_back_again_to_exit">Press back button again to exit.</string>
    <string name="msg_turn_gps_on">Turn on GPS for accuracy result.</string>
    <string name="msg_connect_fail">Connection fail, please check your network or location setting.</string>
    <string name="msg_error_not_sure">Some errors, we not sure why, please restart your application.</string>
    <string name="msg_no_results">Found {0} result(s).</string>
    <string name="msg_no_results_more">No results more.</string>
    <string name="msg_no_results_found">No results found.</string>
    <string name="msg_fill_keyword">Please enter keyword text to search.</string>
    <string name="msg_keyword_encoded">Please enter keyword without encoded mode.</string>
    <string name="msg_fill_radius">Please enter radius value to search.</string>
    <string name="msg_fill_all_fields">Please enter all fields to search.</string>
    <string name="msg_radius_less_50">Please enter radius value less than 50km.</string>
    <string name="msg_help_guide">Some important points:</string>
    <string name="msg_help_1">1. Select a place type in top dropdown list for searching.</string>
    <string name="msg_help_2">2. Fill search information in Search Filter dialog for advanced search.</string>
    <string name="msg_help_3">3. Start navigation for looking orientation sensor to target places.</string>
    <string name="msg_clear_confirm">Do you really want to clear all records?</string>
    <string name="msg_open_wireless_gps">Your network GPS seems to be disabled, do you want to enable it?</string>
    <string name="msg_telephony_not_avaiable">Telephony is not available on your device.</string>
    <string name="msg_done_for_now">Done for now?</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">Asia Plus has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="text_search_target">Target</string>
    <string name="text_current_pos">Current location</string>
    <string name="text_phu_quoc">Phu Quoc Island</string>
    <string-array name="places">
        <item >Park</item>
        <item >Zoo</item>
        <item >Cafe</item>
        <item >Restaurant</item>
        <item >Shopping Mall</item>
        <item >ATM</item>
        <item >Bank</item>
        <item >Hospital</item>
        <item >Pharmacy</item>
        <item >Police</item>
        <item >Food</item>
        <item >Spa</item>
        <item >Bar</item>
        <item >University</item>
    </string-array>
    <string name="action_update">Update</string>
    <string name="drawer_open">Select Options</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="hello_world">Hello world!</string>
    <string-array name="options">
        <item >Category</item>
        <item >Favorite</item>
        <item >History</item>
        <item >Settings</item>
    </string-array>
    <string-array name="languagesEntries">
        <item>English (US)</item>
        <item>Vietnamese</item>
    </string-array>
    <string-array name="languagesValues">
	    <item>US</item>
        <item>VN</item>
	</string-array>
    <string-array name="cateTypeEntries">
        <item>List type</item>
        <item>Metro type</item>
    </string-array>
    <string-array name="cateTypeValues">
        <item>List</item>
	    <item>Metro</item>
	</string-array>
    <string-array name="categoryEntries">
        <item>Restaurant</item>
        <item>Amusement Park, Zoo</item>
        <item>Coffee shop</item>
        <item>Shoping, Store, Bar</item>
        <item>Food</item>
        <item>ATM, Bank, Post office</item>
        <item>Super market, Museum</item>
        <item>Beauty &amp; Spa</item>
        <item>Bus stop, Gas station</item>
        <item>Night club, Movie theater</item>
        <item>Health care, Hospital, Pharmacy</item>
        <item>School, University</item>
        <item>Stadium, Gym</item>
    </string-array>
</resources>