<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
        android:id="@+id/action_download_more"
        android:icon="@drawable/icon_download_more"
        android:orderInCategory="1"
        android:showAsAction="always|withText"
        android:title="@string/action_download_more"/>
        
    <item
        android:id="@+id/action_show_list"
        android:icon="@drawable/icon_list"
        android:orderInCategory="2"
        android:showAsAction="always|withText"
        android:title="@string/action_show_list"/>
    
    <item
        android:id="@+id/help"
        android:icon="@drawable/icon_help_48"
        android:orderInCategory="3"
        android:showAsAction="always|withText"
        android:title="@string/action_help"/>

</menu>