<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <item
        android:visible="false"
        android:id="@+id/action_remove_line"
        android:icon="@drawable/icon_trash_empty"
        android:orderInCategory="100"
        android:showAsAction="always|withText"
        android:title="@string/action_remove_line"/> -->
    
	<item
        android:id="@+id/action_download_more"
        android:icon="@drawable/icon_download_more"
        android:orderInCategory="1"
        android:showAsAction="always|withText"
        android:visible="false"
        android:title="@string/action_download_more"/>
        
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/icon_search_48"
        android:orderInCategory="2"
        android:showAsAction="always|withText"
        android:visible="false"
        android:title="@string/action_filter"/>
    <item
        android:id="@+id/action_show_list"
        android:icon="@drawable/icon_list"
        android:orderInCategory="3"
        android:showAsAction="always|withText"
        android:visible="false"
        android:title="@string/action_show_list"/>
    <item
        android:id="@+id/help"
        android:icon="@drawable/icon_help_48"
        android:orderInCategory="4"
        android:showAsAction="always|withText"
        android:title="@string/action_help"/>
    <!-- <item
        android:id="@+id/action_settings"
        android:icon="@drawable/icon_settings"
        android:orderInCategory="5"
        android:showAsAction="always|withText"
        android:title="@string/action_settings"/> -->

</menu>