<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/box_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/map_icon_new" />

    <TextView
        style="@style/StyleTextInSideMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/app_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_version"
        style="@style/StyleTextInDetailInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/text_app_version" />

    <TextView
        style="@style/StyleTextInAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/msg_about" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            style="@style/StyleTextInHomeTile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/about_website" />

        <ImageView
            android:id="@+id/img_website"
            android:layout_width="@dimen/item_side_menu_icon"
            android:layout_height="@dimen/item_side_menu_icon"
            android:src="@drawable/icon_browser" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            style="@style/StyleTextInHomeTile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/about_email" />

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="@dimen/item_side_menu_icon"
            android:layout_height="@dimen/item_side_menu_icon"
            android:src="@drawable/icon_email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            style="@style/StyleTextInHomeTile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/about_phone" />

        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="@dimen/item_side_menu_icon"
            android:layout_height="@dimen/item_side_menu_icon"
            android:src="@drawable/icon_phone_disable" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            style="@style/StyleTextInHomeTile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/about_address" />

        <ImageView
            android:id="@+id/img_address"
            android:layout_width="@dimen/item_side_menu_icon"
            android:layout_height="@dimen/item_side_menu_icon"
            android:src="@drawable/icon_detail_location_2" />
    </LinearLayout>

    <TextView
        style="@style/StyleTextInAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/text_copyright" />

</LinearLayout>