<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context="com.zulu.places.layout.DrawerActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:clickable="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_side_menu_category"
            style="@style/StyleTextInSideMenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_side_menu_height"
            android:background="@drawable/shape_side_menu_button"
            android:gravity="center_vertical"
            android:text="@string/title_category"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_side_menu_favorite"
            style="@style/StyleTextInSideMenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_side_menu_height"
            android:background="@drawable/shape_side_menu_button"
            android:gravity="center_vertical"
            android:text="@string/title_favorite" />

        <TextView
            android:id="@+id/txt_side_menu_history"
            style="@style/StyleTextInSideMenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_side_menu_height"
            android:background="@drawable/shape_side_menu_button"
            android:gravity="center_vertical"
            android:text="@string/title_history" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/DarkGray" />

        <LinearLayout
            android:id="@+id/btn_side_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:orientation="horizontal" >

            <TextView
                style="@style/StyleSmallTextInSideMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_side_menu_button_gray"
                android:gravity="center_vertical"
                android:text="@string/action_help" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/DarkGray" />

        <LinearLayout
            android:id="@+id/btn_side_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:orientation="horizontal" >

            <TextView
                style="@style/StyleSmallTextInSideMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_side_menu_button_gray"
                android:gravity="center_vertical"
                android:text="@string/action_about" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/DarkGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="@dimen/item_side_menu_icon"
                    android:layout_height="@dimen/item_side_menu_icon"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_map" />

                <TextView
                    style="@style/StyleTextInSideMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_search_target" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/grp_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp" >

                <RadioButton
                    android:id="@+id/rb_curr_pos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_current_pos"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rb_phu_quoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_phu_quoc"
                    android:textColor="@color/white" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/SideBlackLine" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/White"
        android:clickable="true"
        android:gravity="bottom|right"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txt_app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/text_app_version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/text_copyright"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>